<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_ttl_game" />
        <item
            android:id="@+id/nav_export_import"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/navigation_ttl_export_import" />


    </group>

    <item android:title="@string/navigation_cat_communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_ttl_about" />
        </menu>
    </item>

</menu>
